@@ -53,6 +53,7 @@ TBD
 	* Spelling fixes.  Thanks Andreas Schulze
 	* Hyphen used as minus in manpages.  Thanks Andreas Schulze.
 	* RFC7553 RR Type URI is supported by default.
+	* Fix ECDSA signature generation, do not omit leading zeroes.
 
 1.6.17	2014-01-10
 	* Fix ldns_dnssec_zone_new_frm_fp_l to allow the last parsed line of a
